--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,8 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>org.springframework.data</groupId>
-		    <artifactId>spring-data-jpa</artifactId>
-		    <version>2.6.0</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 	
 		<dependency>
