--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,8 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver // falta na documentação.
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.generate-ddl=true
